--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -177,6 +177,15 @@
                       ● Guatemala</br>
                       ● El salvador</br>
                       ● Usa
+</br></br>
+                      <div class="card card-aviso mx-3 mb-5 justify-content-center ">
+                        <div class="card-body">
+
+                          <p class="card-text">
+                            En el campus USA, la documentación dependerá del país donde se hayan cursados los estudios, puesto que son muy variables los documentos.
+                          </p>
+                        </div>
+                      </div>
 
                     </div>
 
