--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -311,7 +311,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Programa activo o servicio social. <br/>
 
@@ -624,7 +624,7 @@
 
                       3.-Licenciatura que cursa. <br/>
 
-                      4.-Intitución. <br/>
+                      4.-Institución. <br/>
 
                       5.-Indicar trabajo colaborativo<br/>
 
@@ -1086,9 +1086,7 @@
         <div class="accordion-body" id="SStrabajo">
           <strong>Trabajo colaborativo</strong> <br/><br/>
 
-          La liberación del servicio social a través de Trabajo Colaborativo es una modalidad en la cual el 
-          aplica un proyecto relacionado a el
-          campo de estudios en donde empleara las habilidades y conocimientos adquiridos durante su licenciatura<br/>
+          La liberación del servicio social a través de Trabajo Colaborativo es una modalidad en la cual aplica un proyecto relacionado al campo de estudios en donde empleará las habilidades y conocimientos adquiridos durante su licenciatura.<br/>
 
           Para iniciar debe compartir el proyecto que busca aplicar, así como los beneficios que significarán para la
           formación profesional y
@@ -1251,7 +1249,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Indicar trabajo colaborativo<br/>
 
@@ -1600,7 +1598,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Indicar trabajo colaborativo<br/>
 
@@ -1919,7 +1917,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Indicar trabajo colaborativo<br/>
 
@@ -2257,7 +2255,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Indicar trabajo colaborativo<br/>
 
@@ -2602,7 +2600,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Indicar trabajo colaborativo<br/>
 
@@ -2949,7 +2947,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Indicar trabajo colaborativo<br/>
 
@@ -3282,7 +3280,7 @@
 
                     3.-Licenciatura que cursa. <br/>
 
-                    4.-Intitución. <br/>
+                    4.-Institución. <br/>
 
                     5.-Indicar trabajo colaborativo<br/>
 
