--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -5,7 +5,7 @@
       <ul class="ul container">
           <div class="row text-center">
           <div class="col"><li class="li activo" id="menuTiposIngresoSe">Tipos de ingreso</li></div>
-          <div class="col"><li class="li" id="menuTramitesEscolares">Tramites que realiza escolares</li></div>
+          <div class="col"><li class="li" id="menuTramitesEscolares">Trámites que realiza escolares</li></div>
           <div class="col"><li class="li" id="menuCostosSe">Costos en plataforma</li></div>
           <div class="col"><li class="li" id="menuPreguntas_fSe">Diploma intermedio</li></div>
           </div>
@@ -19,7 +19,7 @@
           <div class="border border-0 card mt-1">
             
             <div class="card border-0 py-3 px-3" >
-              <h4><b>¿Que son los tipos de ingreso?</b></h4></br>
+              <h4><b>¿Qué son los tipos de ingreso?</b></h4></br>
               
               <a>
               Para ingresar a cursar un grado académico dentro de Utel es necesario determinar el tipo de ingreso al plan académico para 
@@ -83,10 +83,10 @@
                             oficial a estudios realizados fuera del Sistema Educativo Nacional (en el extranjero), 
                             siempre y cuando sean equiparables con estudios realizados dentro de dicho sistema.      
                             <br/><br/>
-                            En este tramite el alumno debe llevar a cabo el proceso de revalidación correspondiente y cumplir con las 
+                            En este trámite el alumno debe llevar a cabo el proceso de revalidación correspondiente y cumplir con las 
                             normas establecidas. (Los alumnos que ingresen por esta opción, su egreso será el mismo que un alumno regular, 
                             cumpliendo con su servicio social para poder realizar su registro para emisión de cédula profesional, 
-                            de igual forma es necesario realizar el tramite de obtención de CURP).
+                            de igual forma es necesario realizar el trámite de obtención de CURP).
                                                       
 
                           </p>
@@ -151,7 +151,7 @@
 
         <!--Tramites que realiza escolares-->
         <div class="bloque" id="bloqueTramitesEscolares">
-          <h4><b>Tramites que realiza escolares</b></h4></br>
+          <h4><b>Trámites que realiza escolares</b></h4></br>
           
           <div class="row">
 
@@ -294,7 +294,7 @@
 
             <div class="col-4">
               <div class="col">
-                <strong>Tramite</strong></br>
+                <strong>Trámite</strong></br>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(1)">Constancia de término</a>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(2)">Constancia de estudios</a>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarTramite(3)">Carta pasante</a>
@@ -312,12 +312,12 @@
 
         <!--Costos-->
         <div class="bloque" id="bloqueTramitesEscolares">
-          <h4 class="text-center"><b>Tramites que realiza escolares</b></h4></br>
+          <h4 class="text-center"><b>Trámites que realiza escolares</b></h4></br>
           
           <div class="row">
             <div class="col-3">
               <div class="col">
-                <strong>Tramite</strong></br>
+                <strong>Trámite</strong></br>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarCosto(2)">Utel HIGER</a>
                 <a class="Botonmanual row py-3 px-3 my-2 bton" onclick="mostrarCosto(1)">Utel LATAM</a>
               </div>
