--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -24,8 +24,7 @@
         <div class="border-3 card card-importante justify-content-center ">
           <div class="card-body">
             <p class="card-text">
-              Es importante recalcar que debemos evitar proporcionar datos directos de colaboradores a los alumnos, la
-              mayoría de la información es para compartir internamente.
+              Advertencia: Queda prohibido compartir los datos personal (teléfono, correo) de los colaboradores a los alumnos, esta información es de uso interno.
             </p>
           </div>
         </div>
