--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -29,8 +29,8 @@
             <h4><b>Requisitos de los documentos.</b></h4></br>
 
             <a>
-              Con la documentación física se realiza la inscripción oficial ante el sistema educativo (SEP) y desde ese
-              momento se registran las calificaciones del alumno periodo a periodo.
+              Con la documentación física se realiza la inscripción oficial ante el sistema educativo (SEP) y desde ese momento registrar sus calificaciones cada periodo. 
+              Al ser egresado y liberar su servicio social, tiene derecho a la emisión del Certificado de estudios y Título profesional/Grado académico.
               De tal manera que al aprobar las materias y servicio social el alumno tiene derecho a Título y
               Cédula.</br></br>
 
