--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -78,7 +78,7 @@
     <!--Servicio social Regular-->
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        <button class="accordion-buttone accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne"
           id="menuRegular">
           Regular
@@ -3173,7 +3173,7 @@
     <!--Servicio Art 91-->
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        <button class="accordion-buttone accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo"
           id="menuArt91">
           Art. 91
@@ -3429,7 +3429,7 @@
     <!--Servicio Art 52-->
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        <button class="accordion-buttone accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
           aria-controls="panelsStayOpen-collapseThree" id="menuArt52">
           Art. 52
