--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -78,7 +78,7 @@ body {
   }
   
   .accordion-buttone{
-    background-color: #64cc33;
+    background-color: #bdf7a3;
   }
 
   .accordion-button:hover {
