--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -704,9 +704,9 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Jessica Joselin Pérez</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">José Roberto Reyes Simbrón</h6>
                     <p class="card-text">
-                      Cargo: </br>Mentora de Certificación</br>
+                      Cargo: </br>Supervisor de Certificación</br>
                       Correo: </br>jguzmape@utel.edu.mx</br>
                       Funciones:</br>Emisión del certificado total de estudios 
 
@@ -717,9 +717,9 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">José Daniel Gálvez</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Jessica Joselin Pérez</h6>
                     <p class="card-text">
-                      Cargo: </br>Mentor de Titulación</br>
+                      Cargo: </br>Supervisora de Titulación</br>
                       Correo: </br>jgalvece@s4learning.com</br>
                       Funciones:</br>Emisión de títulos
 
@@ -2597,7 +2597,7 @@
 
       <!--Glosario-->
       <div class="bloque" id="bloquePreguntasFrecuentesServicioSocial">
-        <h3>Glosario</h3>
+        <h3 class="text-center">Glosario</h3>
         <div class="framedoc m-5">
           <iframe src="docs/doc/glosario.pdf" width="100%" height="680px"></iframe>
         </div>
@@ -2607,15 +2607,17 @@
   </div>
 </div>
 
-<div class="container rounded-3 my-4 py-3 bg-white">
+<div class="container rounded-3 my-4 py-3 text-center bg-white">
 
-  <h3 class="text-center">Responsables por Departamentos</h3>
+  <h3>Responsables por Departamentos</h3>
 
   <img class="d-block w-100" src="img/directorio/responsables.png" alt="">
 
+  <a href="https://docs.google.com/document/d/1WKSE4QlWt_pxJkUcrtlsKpxnt_x8dBQX/edit?" ><button class="Botonmanual py-3 text-center border-0" >Ver documento</button></a>
+
 </div>
 
-<div class="container rounded-3 my-4 py-3 bg-white">
+<div class="container rounded-3 my-4  bg-white">
 
   <h3 class="text-center">Otras bases de información</h3>
 
