--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -1,13 +1,13 @@
 <div class="container rounded-3 py-3 bg-white"> 
 
-  <h1 class="text-center" id="certificacion">Equivalencia academica</h1>
+  <h1 class="text-center" id="certificacion">Equivalencia académica</h1>
   <div class="contenedor ">
     <ul class="ul container">
         <div class="row text-center">
         <div class="col"><li class="li activo">Apostilla</li></div>
-        <div class="col"><li class="li">Equivalencia academica</li></div>
+        <div class="col"><li class="li">Equivalencia académica</li></div>
         <div class="col"><li class="li">CINE UNESCO</li></div>
-        <div class="col"><li class="li">Equivalencia academica USA</li></div>
+        <div class="col"><li class="li">Equivalencia académica USA</li></div>
         <div class="col"><li class="li">CPA</li></div>
         </div>
     </ul>
@@ -253,12 +253,9 @@
           <div class="row">
             <div class="col-md-8">
 
-              <h5 class="card-title">¿Qué es el Proceso de Equivalencia academica LATAM?</h5></br>
+              <h5 class="card-title">¿Qué es el Proceso de Equivalencia académica LATAM?</h5></br>
               <p class="card-text" style="text-align: justify;">
-                La convalidación de títulos es el reconocimiento que el Ministerio de Educación Nacional efectúa
-                sobre un título de educación superior otorgado por una institución legalmente autorizada en el
-                país de origen. Este reconocimiento permite adquirir los mismos efectos académicos y legales en
-                otro país que tienen los títulos otorgados por las Instituciones de Educación Superior.
+                Es el trámite para egresados extranjeros ante la autoridad educativa de cada país o institución encargada que certifica que la firma o sello del título de Utel fue emitido por un funcionario público en ejercicio de sus funciones.
 
               </p>
 
