--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -14,7 +14,7 @@
             <li class="li">Legalización</li>
           </div>
           <div class="col">
-            <li class="li">Archivo</li>
+            <li class="li">Dictaminación</li>
           </div>
           <div class="col">
             <li class="li">Procesos</li>
@@ -1412,7 +1412,7 @@
           </div>
         </div>
 
-        <!--Archivo-->
+        <!--Dictaminación-->
         <div class="bloque" id="bloqueArchivo">
           <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
             <div class="col">
