--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -75,6 +75,18 @@
 
   <div class="accordion" id="accordionPanelsStayOpen">
 
+    <h4 class=" text-center"><b>Modalidades</b></h4>
+          
+    <p style="text-align: justify;">
+      Con base en la normatividad, en Utel contamos con 3 opciones de liberación: <br/>
+      1. Regular (los programas existentes hasta el momento).<br/>
+      2. Artículo 91. Alumnos trabajadores en activo de la Federación o del Gobierno de alguno de los estados de la República Mexicana.<br/>
+      3. Artículo 52. Mayores de 60 años o impedidos por enfermedad grave.<br/>
+      <br/> 
+      Las modalidades Trabajo colaborativo, Para las juventudes, Coach titulación y profesionalización, Para la comunidad, Con causa, Empresas y emprendimientos y Programa de tutorías, son derivadas de la modalidad de servicio social regular.
+
+    </P>
+
     <!--Servicio social Regular-->
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -3173,7 +3185,7 @@
     <!--Servicio Art 91-->
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-        <button class="accordion-buttone accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        <button class="accordion-buttone2 accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo"
           id="menuArt91">
           Art. 91
@@ -3429,7 +3441,7 @@
     <!--Servicio Art 52-->
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-        <button class="accordion-buttone accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        <button class="accordion-buttone3 accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
           aria-controls="panelsStayOpen-collapseThree" id="menuArt52">
           Art. 52
