--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -11,7 +11,7 @@
       <div class="navbar-nav">
         <a class="nav-link" aria-current="page" href="/">Inicio</a>
         <a class="nav-link" href="titulacion">Titulación</a>
-        <a class="nav-link" href="latam">Equivalencia academica</a>
+        <a class="nav-link" href="latam">Equivalencia académica</a>
         <a class="nav-link" href="serviciosocial">Servicio social</a>
         <a class="nav-link" href="servicioses">Servicios escolares</a>
         <a class="nav-link" href="recoleccion">Recolección de documentos</a>
