--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1461,7 +1461,112 @@
 
         <!--Dictaminación-->
         <div class="bloque" id="bloqueArchivo">
+
+          <div class="card border-0 py-3 px-3" >
+
+          <h4><b>¿Qué es la dictaminación?</b></h4>
           
+          <p style="text-align: justify;">
+            Es el procedimiento mediante el cual la institución donde estudio el bachillerato subsana datos faltantes en el Certificado de estudios de Bachillerato
+          </P>
+
+          <h4><b>Proceso</b></h4>
+
+          <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
+            <div class="col">
+              <div class="card border-0 mb-3" >
+                  <div class="row g-0">
+
+                    
+
+                    <div class="col-lg-5">
+                      
+                    </div>
+
+
+                    <div class="col-lg-7">
+
+                      <div class="card border-0 mb-3 py-2 doc activo" style="display: block;" id="UtelHCostos">
+                        
+                        <img class="mx-auto d-block img-fluid" src="img/Recolecion/acuse-autenticacion.png">
+                        
+                      </div> 
+
+                    </div>
+
+                    
+                  </div>
+              </div>
+            </div>
+          </div>
+
+          <h4><b>Ligas para validación de documentos</b></h4>
+
+          <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
+            <div class="col">
+              <div class="card border-0 mb-3" >
+                  <div class="row g-0">   
+
+                    <div class="col-lg-6">
+                      Sistema de Información y Gestión Educativa<br/>
+                      Validación de documentos académicos electrónicos
+                    </div>
+
+                    <div class="col-lg-6">
+                      https://siged.sep.gob.mx/SIGED/documentos.html?folio=CTG17017688
+                    </div>
+
+
+                    <div class="col-lg-6">
+                       Validación de certificados del colegio de bachilleres
+                    </div>
+
+                    <div class="col-lg-6">
+                      https://siiaa.cbachilleres.edu.mx/certificados/                   
+                    </div>
+
+                    <div class="col-lg-6">
+                       Validación de certificados electrónicos Conalep
+
+                    </div>
+
+                    <div class="col-lg-6">
+                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
+                    </div>
+
+                    <div class="col-lg-6">
+                       Validación de certificados electrónicos Conalep
+
+                    </div>
+
+                    <div class="col-lg-6">
+                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
+                    </div>
+
+                    <div class="col-lg-6">
+                       Validación de certificados electrónicos Conalep
+
+                    </div>
+
+                    <div class="col-lg-6">
+                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
+                    </div>
+
+                    <div class="col-lg-6">
+                       Validación de certificados electrónicos Conalep
+
+                    </div>
+
+                    <div class="col-lg-6">
+                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
+                    </div>
+
+                  </div>
+              </div>
+            </div>
+          </div>
+
+          </div>
 
         </div>
 
