--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -236,16 +236,13 @@
               <img class="imagenes_ejemplo d-block w-100" src="img/titulacion/convencionhaya.png" >    
             </div>
           </div>
-          
-          
-          
           </div>
           
         </div>
 
       </div>
 
-      <!--Convalidación-->
+      <!--Equivalencia académica LATAM-->
       <div class="bloque" id="bloqueConvalidacion">
 
         <div class="card-body">
