--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1488,7 +1488,7 @@
 
                       <div class="card border-0 mb-3 py-2 doc activo" style="display: block;" id="UtelHCostos">
                         
-                        <img class="mx-auto d-block img-fluid" src="img/Recolecion/acuse-autenticacion.png">
+                        <img class="mx-auto d-block img-fluid" src="img/Recoleccion/acuse-autenticacion.png">
                         
                       </div> 
 
@@ -1512,53 +1512,96 @@
                       Validación de documentos académicos electrónicos
                     </div>
 
-                    <div class="col-lg-6">
-                      https://siged.sep.gob.mx/SIGED/documentos.html?folio=CTG17017688
+                    <div class="col-lg-6 card border-0">
+                        
+                      <a href="https://siged.sep.gob.mx/SIGED/documentos.html?folio=CTG17017688" target="_blank">
+                        <button class="col btn botonejemdoc" type="button" >
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion1.png">
+                        </button>
+                      </a> 
                     </div>
-
 
                     <div class="col-lg-6">
                        Validación de certificados del colegio de bachilleres
                     </div>
 
+                    <div class="col-lg-6 card border-0">
+                      <a href="https://siiaa.cbachilleres.edu.mx/certificados/" target="_blank">
+                        <button class="col btn botonejemdoc" type="button" >
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion2.png">
+                        </button>
+                      </a> 
+                    </div>
+                    
+
                     <div class="col-lg-6">
-                      https://siiaa.cbachilleres.edu.mx/certificados/                   
+                      Consulta de Certificados<br/>
+                      Dirección general de bachillerato
                     </div>
 
-                    <div class="col-lg-6">
-                       Validación de certificados electrónicos Conalep
-
+                    <div class="col-lg-6 card border-0">
+                      <a href="http://www.pace.sep.gob.mx/certificadosdgb/certificadoremesadetalles?find=ByFolioEq" target="_blank">
+                        <button class="col btn botonejemdoc" type="button" >
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion3.png">
+                        </button>
+                      </a> 
                     </div>
 
-                    <div class="col-lg-6">
-                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
-                    </div>
 
                     <div class="col-lg-6">
-                       Validación de certificados electrónicos Conalep
-
-                    </div>
-
-                    <div class="col-lg-6">
-                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
-                    </div>
-
-                    <div class="col-lg-6">
-                       Validación de certificados electrónicos Conalep
-
-                    </div>
-
-                    <div class="col-lg-6">
-                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
-                    </div>
-
-                    <div class="col-lg-6">
-                       Validación de certificados electrónicos Conalep
+                    Validación de certificados del cecyte
 
                     </div>
 
+                    <div class="col-lg-6 card border-0">
+                      <a href="https://certificados.cecyte.saeko.io/" target="_blank">
+                        <button class="col btn botonejemdoc" type="button" >
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion4.png">
+                        </button>
+                      </a> 
+                    </div>
+
+
                     <div class="col-lg-6">
-                      https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f
+                    Validación de certificados de la Prepa en Línea-SEP
+
+                    </div>
+
+                    <div class="col-lg-6 card border-0">
+                      <a href="https://prepaenlinea.sep.gob.mx/validarcertificado/" target="_blank">
+                        <button class="col btn botonejemdoc" type="button" >
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion5.png">
+                        </button>
+                      </a> 
+                    </div>
+
+
+                    <div class="col-lg-6">
+                    Ventanilla Electrónica<br/>
+                    Subsecretaría de Educación Media Superior
+
+                    </div>
+
+                    <div class="col-lg-6 card border-0">
+                      <a href="https://sems.edomex.gob.mx/ventanilla-electronica" target="_blank">
+                        <button class="col btn botonejemdoc" type="button" >
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion6.png">
+                        </button>
+                      </a> 
+                    </div>
+
+
+                    <div class="col-lg-6">
+                    Validación de certificados del Conalep
+
+                    </div>
+
+                    <div class="col-lg-6 card border-0">
+                      <a href="https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f" target="_blank">
+                        <button class="col btn botonejemdoc" type="button" >
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion7.png">
+                        </button>
+                      </a> 
                     </div>
 
                   </div>
