--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -142,7 +142,7 @@
             <div class="card-body">
 
               <p class="card-text">
-                Para el proceso de convalidación ante el Ministerio de Educación en Ecuador a partir de este año 2023, sólo será necesario el Título Apostillado y la carta CINE UNESCO de acuerdo con la clasificación UNESCO, ambos documentos los realiza SER en el proceso de Certificación-Titulación, se comparte lo anterior para conocimiento y orientación adecuada a nuestros egresados ecuatorianos.
+                Para el proceso de equivalencia académica ante el Ministerio de Educación en Ecuador a partir de este año 2023, sólo será necesario el Título Apostillado y la carta CINE UNESCO de acuerdo con la clasificación UNESCO, ambos documentos los realiza SER en el proceso de Certificación-Titulación, se comparte lo anterior para conocimiento y orientación adecuada a nuestros egresados ecuatorianos.
               </p>
             </div>
           </div>
