--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -555,7 +555,7 @@
           <h4><b>CINE UNESCO</b></h4></br>
           
           <a style="text-align: justify;">
-            Documento Institucional que se emite a los egresados de Ecuador interesados en realizar su convalidación. 
+            Documento Institucional que se emite a los egresados de Ecuador interesados en realizar su Equivalencia academica. 
             Hace constar la Modalidad de estudios y los Campos CINE-UNESCO. Deben haber acreditado el 100% de créditos del plan de estudios 
             de licenciatura, maestría o doctorado. <br/><br/>
             El costo es de: $15.00 USD<br/><br/>
