--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -7,7 +7,7 @@
       <div class="col-3">
         <div class="col">
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(1)">Titulación</a>
-          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(5)">Convalidación</a>
+          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(5)">Equivalencia academica</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(2)">Servicio social</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(3)">Servicios escolares</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(4)">Recolección de documentos</a>
@@ -37,12 +37,12 @@
           <a  href="titulacion#boqueCertificadoPar" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncertpar">Certificado parcial</a>
         </div>
 
-        <!--Convalidación-->
+        <!--Equivalencia academica-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="apostilla">
           <img src="img/Apostilla_img.png" class="imagenes_mapa" alt="...">
-          <h5 class="card-title text-center">Convalidación</h5>
+          <h5 class="card-title text-center">Equivalencia academica</h5>
           <a href="latam#bloqueApostilla" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonApostilla">Apostilla</a>
-          <a href="latam#bloqueConvalidacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonConvalidacion">Convalidación</a>
+          <a href="latam#bloqueConvalidacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonConvalidacion">Equivalencia academica</a>
           <a href="latam#bloqueUnesco" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonUnesco">CINE UNESCO</a>
           <a href="latam#bloqueEqusa" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonEqusa">Equivalencia academica USA</a>
           <a href="latam#bloqueCpa" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonCpa">CPA</a>
