--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -152,7 +152,7 @@
 
             <p class="card-text">
               Para los alumnos de Perú el CPA únicamente es necesario tramitarlo si se lo solicitan al momento de realizar 
-              el trámite de convalidación
+              el trámite de equivalencia académica.
             </p>
           </div>
           </div>
