--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -261,7 +261,7 @@
             <div class="col-md-4 card card-aviso py-3 px-3 border-0">
 
               <h5>
-                Fichas tecnicas
+                Fichas técnicas
               </h5>             
               <a class="Botonmanual py-3 text-center border-0" href="https://docs.google.com/spreadsheets/d/1xX0yIa7EIC44mCqtGQJOO7QmnxddH8gQtx5nylgIFpY/edit#gid=1909247615"
                 target="_blank">Abrir formulario
@@ -334,7 +334,7 @@
         </div>
         
         <br/>
-        <h3>Fichas tecnicas</h3>
+        <h3>Fichas técnicas</h3>
         <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
   
           <!--Dividir col y card en div-->
@@ -606,7 +606,7 @@
               tu Título o Grado académico avalado por la SEP apostillado en México y solicites el trámite que
               consiste en:</br></br>  
 
-              <h6>1. Llenar la Solicitud de Convalidación de Título de Utel en USA.</h6></br></br>    
+              <h6>1. Llenar la Solicitud de Equivalencia academica de Título de Utel en USA.</h6></br></br>    
               <h6>2. Pagar el costo correspondiente al trámite, que incluye:</h6></br></br>    
                 ● Envío de documentos a USA</br> 
                 ● Traducción oficial del Título de Utel (en USA)</br> 
@@ -660,10 +660,10 @@
       <!--CPA--> 
       <div class="bloque" id="bloqueCpa">
         <div class="card border-0 py-3 px-3" >
-            <h4><b>Certificado de programa académico para proceso de convalidación LATAM</b></h4></br>
+            <h4><b>Certificado de programa académico para proceso de Equivalencia academica LATAM</b></h4></br>
             
             <a style="text-align: justify;">
-                Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Convalidación en su país de origen, 
+                Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Equivalencia academica en su país de origen, 
                 que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y 
                 certificado de estudios Utel. <br/><br/>
 
