--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -173,14 +173,14 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                   <button class="accordion-button border border-success collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                    FICHAS TECNICAS DE LATAM
+                    FICHAS TËCNICAS DE LATAM
                   </button>
                 </h2>
 
                   <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                       <div class="container rounded-3 my-3 py-3 bg-white"> 
-                        <h1 class="text-center">FICHAS TECNICAS DE LATAM </h1>
+                        <h1 class="text-center">FICHAS TÉCNICAS DE LATAM </h1>
                         <h5>Paises</h5>
                         
                         <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
